syntax = "proto3";

package org.laokou.oss.api;
option java_multiple_files = true;

message OssUploadCmd {
	string fileType = 1;
	bytes buffer = 2;
	string name = 3;
	string extName = 4;
	string contentType = 5;
	int64 size = 6;
}

message OssUploadCO {
	int64 id = 1;
	string url = 2;
}

message OssUploadResult {
	string code = 1;
	string msg = 2;
	OssUploadCO data = 3;
}

service OssServiceI {
	rpc uploadOss(OssUploadCmd) returns (OssUploadResult);
}
